Crex/tests/type_declarations/intersection_types/invalid_types/invalid_never_type.crxt
--TEST--
never type cannot take part in an intersection type
--FILE--
<?crx

function foo(): never&Iterator {}

?>
--EXPECTF--
Fatal error: Type never cannot be part of an intersection type in %s on line %d
